Moved dependencies order in layout.ejs and add more missing dependencies of dashboard_v1.ejs

--- a/views/dashboard_v1.ejs
+++ b/views/dashboard_v1.ejs
@@ -508,6 +508,7 @@
 
     </section>
 <!-- /.content -->
+    <script src="/libs/admin-lte/js/pages/dashboard.js"></script>
     <script type="text/javascript" language="javascript" class="init">
         sessionStorage.setItem('active_view', '/dashboard');
     </script>
