--- a/views/dashboard_v2.ejs
+++ b/views/dashboard_v2.ejs
@@ -831,6 +831,7 @@
     <!-- /.content -->
 </div>
 <!-- /.content-wrapper -->
+<script src="/libs/admin-lte/js/pages/dashboard2.js"></script>
 <script type="text/javascript" language="javascript" class="init">
     sessionStorage.setItem('active_view', '/dashboard2');
 </script>
