--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,8 @@
 
     <!-- Bootstrap 3.3.7 -->
     <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
+    <!-- Bootstrap wysihtml5 -->
+    <link rel="libs/admin-lte/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css"></script>    
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Ionicons -->
@@ -46,6 +48,31 @@
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
+
+    <!-- Admin LTE's dependencies -->
+
+    <!-- jQuery 2.2.3 -->
+    <script src="/libs/admin-lte/plugins/jQuery/jquery-2.2.3.min.js"></script>
+    <!-- jQuery UI -->
+    <script src="/libs/admin-lte/plugins/jQueryUI/jquery-ui.min.js"></script>
+    <!-- Bootstrap 3.3.7 -->
+    <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Bootstrap wysihtml5 -->
+    <script src="/libs/admin-lte/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
+    <!-- FastClick -->
+    <script src="/libs/admin-lte/plugins/fastclick/fastclick.js"></script>
+    <!-- AdminLTE App -->
+    <script src="/libs/admin-lte/js/app.min.js"></script>
+    <!-- Sparkline -->
+    <script src="/libs/admin-lte/plugins/sparkline/jquery.sparkline.min.js"></script>
+    <!-- jvectormap -->
+    <script src="/libs/admin-lte/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+    <script src="/libs/admin-lte/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+    <!-- SlimScroll 1.3.0 -->
+    <script src="/libs/admin-lte/plugins/slimScroll/jquery.slimscroll.min.js"></script>
+    <!-- ChartJS 1.0.1 -->
+    <script src="/libs/admin-lte/plugins/chartjs/Chart.min.js"></script>
+    
   </head>
 
   <body class="hold-transition skin-blue sidebar-mini">
@@ -775,25 +802,6 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <!--SCRIPTS END-->
-    <!-- jQuery 2.2.3 -->
-    <script src="/libs/admin-lte/plugins/jQuery/jquery-2.2.3.min.js"></script>
-    <!-- Bootstrap 3.3.7 -->
-    <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
-    <!-- FastClick -->
-    <script src="/libs/admin-lte/plugins/fastclick/fastclick.js"></script>
-    <!-- AdminLTE App -->
-    <script src="/libs/admin-lte/js/app.min.js"></script>
-    <!-- Sparkline -->
-    <script src="/libs/admin-lte/plugins/sparkline/jquery.sparkline.min.js"></script>
-    <!-- jvectormap -->
-    <script src="/libs/admin-lte/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-    <script src="/libs/admin-lte/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
-    <!-- SlimScroll 1.3.0 -->
-    <script src="/libs/admin-lte/plugins/slimScroll/jquery.slimscroll.min.js"></script>
-    <!-- ChartJS 1.0.1 -->
-    <script src="/libs/admin-lte/plugins/chartjs/Chart.min.js"></script>
-    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="/libs/admin-lte/js/pages/dashboard2.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="/libs/admin-lte/js/demo.js"></script>
     <!-- Custom script -->
