Fixed FE dependencies issue on layout.ejs

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,6 +23,12 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins
         folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="/vendors/AdminLTE/dist/css/skins/_all-skins.min.css">
+    <!-- Raphael -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+    <!-- Date Range picker -->
+    <link rel="stylesheet" href="/vendors/AdminLTE/plugins/daterangepicker/daterangepicker.css">
+    <!-- Morris -->
+    <link rel="stylesheet" href="/vendors/AdminLTE/plugins/morris/morris.css">
     
     <!--
         Stylesheets and Preprocessors
@@ -49,16 +55,21 @@
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
 
+    <!-- Moment.js -->
+    <script src="/vendors/AdminLTE/plugins/daterangepicker/moment.min.js"></script>
     <!-- Admin LTE's dependencies -->
-
     <!-- jQuery 2.2.3 -->
     <script src="/vendors/AdminLTE/plugins/jQuery/jquery-2.2.3.min.js"></script>
     <!-- jQuery UI -->
     <script src="/vendors/AdminLTE/plugins/jQueryUI/jquery-ui.min.js"></script>
+    <!-- jQuery Knob -->
+    <script src="/vendors/AdminLTE/plugins/knob/jquery.knob.js"></script>
     <!-- Bootstrap 3.3.7 -->
     <script src="/vendors/AdminLTE/bootstrap/js/bootstrap.min.js"></script>
     <!-- Bootstrap wysihtml5 -->
     <script src="/vendors/AdminLTE/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
+    <!-- Bootstrap DateRange Picker -->
+    <script src="/vendors/AdminLTE/plugins/daterangepicker/daterangepicker.js"></script>
     <!-- FastClick -->
     <script src="/vendors/AdminLTE/plugins/fastclick/fastclick.js"></script>
     <!-- AdminLTE App -->
@@ -72,6 +83,8 @@
     <script src="/vendors/AdminLTE/plugins/slimScroll/jquery.slimscroll.min.js"></script>
     <!-- ChartJS 1.0.1 -->
     <script src="/vendors/AdminLTE/plugins/chartjs/Chart.min.js"></script>
+    <!-- Morris -->
+    <script src="/vendors/AdminLTE/plugins/morris/morris.min.js"></script>
     
   </head>
 
