--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
 
     <!-- Bootstrap 3.3.7 -->
-    <link rel="stylesheet" href="vendors/AdminLTE/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/vendors/AdminLTE/bootstrap/css/bootstrap.min.css">
     <!-- Bootstrap wysihtml5 -->
     <link rel="/vendors/AdminLTE/dist/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css"></script>    
     <!-- Font Awesome -->
@@ -407,7 +407,7 @@
                     </span>
                     </a>
                     <ul class="treeview-menu">
-                    <li><a href="/vendors/AdminLTE/dist/pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
+                    <li><a href="/layouts/topnav"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
                     <li><a href="/vendors/AdminLTE/dist/pages/layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
                     <li><a href="/vendors/AdminLTE/dist/pages/layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
                     <li><a href="/vendors/AdminLTE/dist/pages/layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
