--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -361,15 +361,15 @@
           <section class="sidebar">
               <!-- Sidebar user panel -->
               <div class="user-panel">
-              <div class="pull-left image">
-                  <!-- TODO: Get the image from auth token -->
-                  <img src="/vendors/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-              </div>
-              <div class="pull-left info">
-                <!-- TODO: Get user's fullname from auth token -->                
-                <p>Alexander Pierce</p>
-                <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-              </div>
+                <div class="pull-left image">
+                    <!-- TODO: Get the image from auth token -->
+                    <img src="/vendors/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                </div>
+                <div class="pull-left info">
+                    <!-- TODO: Get user's fullname from auth token -->                
+                    <p>Alexander Pierce</p>
+                    <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+                </div>
               </div>
               <!-- search form -->
               <!-- TODO: Define search item resource path -->
@@ -398,6 +398,7 @@
                         <li><a href="/dashboard2"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
                     </ul>
                 </li>
+                <!-- 
                 <li class="treeview">
                     <a href="#">
                     <i class="fa fa-files-o"></i>
@@ -413,14 +414,16 @@
                     <li><a href="/vendors/AdminLTE/dist/pages/layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
                     </ul>
                 </li>
+                -->
                 <li>
-                    <a href="/vendors/AdminLTE/dist/pages/widgets.html">
+                    <a href="/widgets">
                     <i class="fa fa-th"></i> <span>Widgets</span>
                     <span class="pull-right-container">
                         <small class="label pull-right bg-green">new</small>
                     </span>
                     </a>
                 </li>
+                <!--
                 <li class="treeview">
                     <a href="#">
                     <i class="fa fa-pie-chart"></i>
@@ -554,6 +557,7 @@
                 <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
                 <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
                 <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li>
+                -->
               </ul>
           </section>
           <!-- /.sidebar -->
