--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -314,17 +314,17 @@
                   <!-- User Account: style can be found in dropdown.less -->
                   <li class="dropdown user user-menu">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                      <img src="/vendors/AdminLTE/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                      <span class="hidden-xs">Alexander Pierce</span>
+                      <img src="/images/user-160x160.jpg" class="user-image" alt="User Image">
+                      <span class="hidden-xs">Wendy Sanarwanto</span>
                   </a>
                   <ul class="dropdown-menu">
                       <!-- User image -->
                       <li class="user-header">
-                      <img src="/vendors/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                      <img src="/images/user-160x160.jpg" class="img-circle" alt="User Image">
 
                       <p>
-                          Alexander Pierce - Web Developer
-                          <small>Member since Nov. 2012</small>
+                          Wendy Sanarwanto - Software Engineer
+                          <small>Member since Nov. 2007</small>
                       </p>
                       </li>
                       <!-- Menu Body -->
@@ -371,11 +371,11 @@
               <div class="user-panel">
                 <div class="pull-left image">
                     <!-- TODO: Get the image from auth token -->
-                    <img src="/vendors/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                    <img src="/images/user-160x160.jpg" class="img-circle" alt="User Image">
                 </div>
                 <div class="pull-left info">
                     <!-- TODO: Get user's fullname from auth token -->                
-                    <p>Alexander Pierce</p>
+                    <p>Wendy Sanarwanto</p>
                     <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
                 </div>
               </div>
@@ -430,23 +430,25 @@
                         <small class="label pull-right bg-green">new</small>
                     </span>
                     </a>
-                </li>
-                <!--
+                </li>                
                 <li class="treeview">
                     <a href="#">
-                    <i class="fa fa-pie-chart"></i>
-                    <span>Charts</span>
-                    <span class="pull-right-container">
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </span>
+                        <i class="fa fa-pie-chart"></i>
+                        <span>Charts</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
                     </a>
                     <ul class="treeview-menu">
-                    <li><a href="/vendors/AdminLTE/dist/pages/charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
-                    <li><a href="/vendors/AdminLTE/dist/pages/charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
-                    <li><a href="/vendors/AdminLTE/dist/pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
-                    <li><a href="/vendors/AdminLTE/dist/pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+                        <li><a href="/charts/chartjs"><i class="fa fa-circle-o"></i> ChartJS</a></li>
+                        <!--
+                        <li><a href="/vendors/AdminLTE/dist/pages/charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
+                        <li><a href="/vendors/AdminLTE/dist/pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
+                        <li><a href="/vendors/AdminLTE/dist/pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+                        -->
                     </ul>
                 </li>
+                <!-- 
                 <li class="treeview">
                     <a href="#">
                     <i class="fa fa-laptop"></i>
@@ -834,21 +836,24 @@
     <!-- Custom script -->
 	<script type="text/javascript" language="javascript" class="init">
         $(document).ready(function() {
+            // Disable any active treeview menu 1st
+            var active_treeview_menu = $('li.active.treeview');
+            if (active_treeview_menu) {
+                active_treeview_menu.removeClass('active');
+            }
             // Disable any active sub menus 1st
             var active_sub_menu = $("ul.treeview-menu li.active");
             if (active_sub_menu){
-                var active_sub_menus = active_sub_menu.toArray();
-                if (Array.isArray(active_sub_menus) && active_sub_menus.length > 0){
-                    var className = active_sub_menu[0].className;
-                    active_sub_menu[0].className = className.replace('active', '');
-                }
+                active_sub_menu.removeClass('active');
             }
-
+            
             // Activate current loaded view's submenu
             var active_view_path = sessionStorage.getItem('active_view');            
             var tree_menu_to_activate = $('ul.treeview-menu').find('li a[href="'+active_view_path+'"]').parent();
             if (tree_menu_to_activate.length > 0){
                 tree_menu_to_activate.addClass('active');
+                let parent = tree_menu_to_activate.parent().parent();
+                parent.addClass('active');
             }
             else {
                 var sidebar_menu_to_activate = $('ul.sidebar-menu').find('li a[href="'+active_view_path+'"]').parent();
