--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -441,8 +441,8 @@
                     </a>
                     <ul class="treeview-menu">
                         <li><a href="/charts/chartjs"><i class="fa fa-circle-o"></i> ChartJS</a></li>
-                        <!--
-                        <li><a href="/vendors/AdminLTE/dist/pages/charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
+                        <li><a href="/charts/morris"><i class="fa fa-circle-o"></i> Morris</a></li>
+                        <!--                         
                         <li><a href="/vendors/AdminLTE/dist/pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
                         <li><a href="/vendors/AdminLTE/dist/pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
                         -->
