--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -93,6 +93,14 @@
     <script src="/vendors/AdminLTE/plugins/morris/morris.min.js"></script>
     <!-- fullcalendar -->
     <script src="/vendors/AdminLTE/plugins/fullcalendar/fullcalendar.min.js"></script>
+    <!-- FLOT CHARTS -->
+    <script src="/vendors/AdminLTE/plugins/flot/jquery.flot.min.js"></script>
+    <!-- FLOT RESIZE PLUGIN - allows the chart to redraw when the window is resized -->
+    <script src="/vendors/AdminLTE/plugins/flot/jquery.flot.resize.min.js"></script>
+    <!-- FLOT PIE PLUGIN - also used to draw donut charts -->
+    <script src="/vendors/AdminLTE/plugins/flot/jquery.flot.pie.min.js"></script>
+    <!-- FLOT CATEGORIES PLUGIN - Used to draw bar charts -->
+    <script src="/vendors/AdminLTE/plugins/flot/jquery.flot.categories.min.js"></script>
     
   </head>
 
@@ -441,9 +449,9 @@
                     </a>
                     <ul class="treeview-menu">
                         <li><a href="/charts/chartjs"><i class="fa fa-circle-o"></i> ChartJS</a></li>
-                        <li><a href="/charts/morris"><i class="fa fa-circle-o"></i> Morris</a></li>
-                        <!--                         
-                        <li><a href="/vendors/AdminLTE/dist/pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
+                        <li><a href="/charts/morris"><i class="fa fa-circle-o"></i> Morris</a></li>                                                
+                        <li><a href="/charts/flot"><i class="fa fa-circle-o"></i> Flot</a></li>
+                        <!-- 
                         <li><a href="/vendors/AdminLTE/dist/pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
                         -->
                     </ul>
