--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -451,9 +451,7 @@
                         <li><a href="/charts/chartjs"><i class="fa fa-circle-o"></i> ChartJS</a></li>
                         <li><a href="/charts/morris"><i class="fa fa-circle-o"></i> Morris</a></li>                                                
                         <li><a href="/charts/flot"><i class="fa fa-circle-o"></i> Flot</a></li>
-                        <!-- 
-                        <li><a href="/vendors/AdminLTE/dist/pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
-                        -->
+                        <li><a href="/charts/inline"><i class="fa fa-circle-o"></i> Inline charts</a></li>
                     </ul>
                 </li>
                 <!-- 
