Added UI element's general page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -454,7 +454,6 @@
                         <li><a href="/charts/inline"><i class="fa fa-circle-o"></i> Inline charts</a></li>
                     </ul>
                 </li>
-                <!-- 
                 <li class="treeview">
                     <a href="#">
                     <i class="fa fa-laptop"></i>
@@ -464,14 +463,17 @@
                     </span>
                     </a>
                     <ul class="treeview-menu">
-                    <li><a href="/vendors/AdminLTE/dist/pages/UI/general.html"><i class="fa fa-circle-o"></i> General</a></li>
+                    <li><a href="/ui/general"><i class="fa fa-circle-o"></i> General</a></li>
+                    <!-- 
                     <li><a href="/vendors/AdminLTE/dist/pages/UI/icons.html"><i class="fa fa-circle-o"></i> Icons</a></li>
                     <li><a href="/vendors/AdminLTE/dist/pages/UI/buttons.html"><i class="fa fa-circle-o"></i> Buttons</a></li>
                     <li><a href="/vendors/AdminLTE/dist/pages/UI/sliders.html"><i class="fa fa-circle-o"></i> Sliders</a></li>
                     <li><a href="/vendors/AdminLTE/dist/pages/UI/timeline.html"><i class="fa fa-circle-o"></i> Timeline</a></li>
                     <li><a href="/vendors/AdminLTE/dist/pages/UI/modals.html"><i class="fa fa-circle-o"></i> Modals</a></li>
+                    -->
                     </ul>
                 </li>
+                <!--                
                 <li class="treeview">
                     <a href="#">
                     <i class="fa fa-edit"></i> <span>Forms</span>
