Added UI Elements Icons page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -464,8 +464,8 @@
                     </a>
                     <ul class="treeview-menu">
                     <li><a href="/ui/general"><i class="fa fa-circle-o"></i> General</a></li>
-                    <!-- 
-                    <li><a href="/vendors/AdminLTE/dist/pages/UI/icons.html"><i class="fa fa-circle-o"></i> Icons</a></li>
+                    <li><a href="/ui/icons"><i class="fa fa-circle-o"></i> Icons</a></li>
+                    <!--                     
                     <li><a href="/vendors/AdminLTE/dist/pages/UI/buttons.html"><i class="fa fa-circle-o"></i> Buttons</a></li>
                     <li><a href="/vendors/AdminLTE/dist/pages/UI/sliders.html"><i class="fa fa-circle-o"></i> Sliders</a></li>
                     <li><a href="/vendors/AdminLTE/dist/pages/UI/timeline.html"><i class="fa fa-circle-o"></i> Timeline</a></li>
