Added UI Elements sliders page

--- a/views/ui-elements/buttons.ejs
+++ b/views/ui-elements/buttons.ejs
@@ -994,7 +994,7 @@
         <!-- /. row -->
     </section>
     <script>
-        sessionStorage.setItem('active_view', '/ui/icons');
+        sessionStorage.setItem('active_view', '/ui/buttons');
     </script>
 <!-- /.content -->
 </div>
