--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,11 +18,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <!-- jvectormap -->
     <link rel="stylesheet" href="/vendors/AdminLTE/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
-    <!-- Theme style -->
-    <link rel="stylesheet" href="/vendors/AdminLTE/dist/css/AdminLTE.min.css">
-    <!-- AdminLTE Skins. Choose a skin from the css/skins
-        folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" href="/vendors/AdminLTE/dist/css/skins/_all-skins.min.css">
     <!-- Raphael -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
     <!-- Date Range picker -->
@@ -32,6 +27,20 @@
     <!-- fullCalendar 2.2.5-->
     <link rel="stylesheet" href="/vendors/AdminLTE/plugins/fullcalendar/fullcalendar.min.css">
     <link rel="stylesheet" href="/vendors/AdminLTE/plugins/fullcalendar/fullcalendar.print.css" media="print">
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <!-- Ion Slider -->
+    <link rel="stylesheet" href="/vendors/AdminLTE/plugins/ionslider/ion.rangeSlider.css">
+    <!-- ion slider Nice -->
+    <link rel="stylesheet" href="/vendors/AdminLTE/plugins/ionslider/ion.rangeSlider.skinNice.css">
+    <!-- bootstrap slider -->
+    <link rel="stylesheet" href="/vendors/AdminLTE/plugins/bootstrap-slider/slider.css">
+
+    <!-- Theme style -->
+    <link rel="stylesheet" href="/vendors/AdminLTE/dist/css/AdminLTE.min.css">
+    <!-- AdminLTE Skins. Choose a skin from the css/skins
+        folder instead of downloading all of them to reduce the load. -->
+    <link rel="stylesheet" href="/vendors/AdminLTE/dist/css/skins/_all-skins.min.css">
 
     <!-- Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
@@ -78,8 +87,6 @@
     <script src="/vendors/AdminLTE/plugins/daterangepicker/daterangepicker.js"></script>
     <!-- FastClick -->
     <script src="/vendors/AdminLTE/plugins/fastclick/fastclick.js"></script>
-    <!-- AdminLTE App -->
-    <script src="/vendors/AdminLTE/dist/js/app.min.js"></script>
     <!-- Sparkline -->
     <script src="/vendors/AdminLTE/plugins/sparkline/jquery.sparkline.min.js"></script>
     <!-- jvectormap -->
@@ -101,7 +108,15 @@
     <script src="/vendors/AdminLTE/plugins/flot/jquery.flot.pie.min.js"></script>
     <!-- FLOT CATEGORIES PLUGIN - Used to draw bar charts -->
     <script src="/vendors/AdminLTE/plugins/flot/jquery.flot.categories.min.js"></script>
-    
+    <!-- Ion Slider -->
+    <script src="/vendors/AdminLTE/plugins/ionslider/ion.rangeSlider.min.js"></script>
+    <!-- Bootstrap slider -->
+    <script src="/vendors/AdminLTE/plugins/bootstrap-slider/bootstrap-slider.js"></script>        
+
+    <!-- AdminLTE for demo purposes -->
+    <script src="/vendors/AdminLTE/dist/js/demo.js"></script>    
+    <!-- AdminLTE App -->
+    <script src="/vendors/AdminLTE/dist/js/app.min.js"></script>    
   </head>
 
   <body class="hold-transition skin-blue sidebar-mini">
@@ -466,8 +481,8 @@
                     <li><a href="/ui/general"><i class="fa fa-circle-o"></i> General</a></li>
                     <li><a href="/ui/icons"><i class="fa fa-circle-o"></i> Icons</a></li>
                     <li><a href="/ui/buttons"><i class="fa fa-circle-o"></i> Buttons</a></li>
-                    <!--                    
-                    <li><a href="/vendors/AdminLTE/dist/pages/UI/sliders.html"><i class="fa fa-circle-o"></i> Sliders</a></li>
+                    <li><a href="/ui/sliders"><i class="fa fa-circle-o"></i> Sliders</a></li>
+                    <!--
                     <li><a href="/vendors/AdminLTE/dist/pages/UI/timeline.html"><i class="fa fa-circle-o"></i> Timeline</a></li>
                     <li><a href="/vendors/AdminLTE/dist/pages/UI/modals.html"><i class="fa fa-circle-o"></i> Modals</a></li>
                     -->
@@ -839,8 +854,6 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <!--SCRIPTS END-->
-    <!-- AdminLTE for demo purposes -->
-    <script src="/vendors/AdminLTE/dist/js/demo.js"></script>
     <!-- Custom script -->
 	<script type="text/javascript" language="javascript" class="init">
         $(document).ready(function() {
