--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -482,8 +482,8 @@
                     <li><a href="/ui/icons"><i class="fa fa-circle-o"></i> Icons</a></li>
                     <li><a href="/ui/buttons"><i class="fa fa-circle-o"></i> Buttons</a></li>
                     <li><a href="/ui/sliders"><i class="fa fa-circle-o"></i> Sliders</a></li>
-                    <!--
-                    <li><a href="/vendors/AdminLTE/dist/pages/UI/timeline.html"><i class="fa fa-circle-o"></i> Timeline</a></li>
+                    <li><a href="/ui/timeline"><i class="fa fa-circle-o"></i> Timeline</a></li>
+                    <!--                    
                     <li><a href="/vendors/AdminLTE/dist/pages/UI/modals.html"><i class="fa fa-circle-o"></i> Modals</a></li>
                     -->
                     </ul>
