Added Forms - General Elements page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -502,20 +502,22 @@
                         <li><a href="/ui/modal"><i class="fa fa-circle-o"></i> Modals</a></li>
                     </ul>
                 </li>
-                <!--                
                 <li class="treeview">
                     <a href="#">
-                    <i class="fa fa-edit"></i> <span>Forms</span>
-                    <span class="pull-right-container">
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </span>
+                        <i class="fa fa-edit"></i> <span>Forms</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
                     </a>
                     <ul class="treeview-menu">
-                    <li><a href="/vendors/AdminLTE/dist/pages/forms/general.html"><i class="fa fa-circle-o"></i> General Elements</a></li>
-                    <li><a href="/vendors/AdminLTE/dist/pages/forms/advanced.html"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
-                    <li><a href="/vendors/AdminLTE/dist/pages/forms/editors.html"><i class="fa fa-circle-o"></i> Editors</a></li>
+                        <li><a href="/forms/general"><i class="fa fa-circle-o"></i> General Elements</a></li>
+                        <!-- 
+                        <li><a href="/vendors/AdminLTE/dist/pages/forms/advanced.html"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
+                        <li><a href="/vendors/AdminLTE/dist/pages/forms/editors.html"><i class="fa fa-circle-o"></i> Editors</a></li>
+                        -->
                     </ul>
                 </li>
+                <!-- 
                 <li class="treeview">
                     <a href="#">
                     <i class="fa fa-table"></i> <span>Tables</span>
