--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,6 +22,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
     <!-- Date Range picker -->
     <link rel="stylesheet" href="/vendors/AdminLTE/plugins/daterangepicker/daterangepicker.css">
+    <!-- bootstrap datepicker -->
+    <link rel="stylesheet" href="/vendors/AdminLTE/plugins/datepicker/datepicker3.css">
+    <!-- iCheck for checkboxes and radio inputs -->
+    <link rel="stylesheet" href="/vendors/AdminLTE/plugins/iCheck/all.css">
+    <!-- Bootstrap Color Picker -->
+    <link rel="stylesheet" href="/vendors/AdminLTE/plugins/colorpicker/bootstrap-colorpicker.min.css">
+    <!-- Bootstrap time Picker -->
+    <link rel="stylesheet" href="/vendors/AdminLTE/plugins/timepicker/bootstrap-timepicker.min.css">
+    <!-- Select2 -->
+    <link rel="stylesheet" href="/vendors/AdminLTE/plugins/select2/select2.min.css">        
     <!-- Morris -->
     <link rel="stylesheet" href="/vendors/AdminLTE/plugins/morris/morris.css">
     <!-- fullCalendar 2.2.5-->
@@ -101,6 +111,12 @@
     <script src="/vendors/AdminLTE/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
     <!-- Bootstrap DateRange Picker -->
     <script src="/vendors/AdminLTE/plugins/daterangepicker/daterangepicker.js"></script>
+    <!-- bootstrap datepicker -->
+    <script src="/vendors/AdminLTE/plugins/datepicker/bootstrap-datepicker.js"></script>
+    <!-- bootstrap color picker -->
+    <script src="/vendors/AdminLTE/plugins/colorpicker/bootstrap-colorpicker.min.js"></script>
+    <!-- bootstrap time picker -->
+    <script src="/vendors/AdminLTE/plugins/timepicker/bootstrap-timepicker.min.js"></script>    
     <!-- FastClick -->
     <script src="/vendors/AdminLTE/plugins/fastclick/fastclick.js"></script>
     <!-- Sparkline -->
@@ -128,7 +144,15 @@
     <script src="/vendors/AdminLTE/plugins/ionslider/ion.rangeSlider.min.js"></script>
     <!-- Bootstrap slider -->
     <script src="/vendors/AdminLTE/plugins/bootstrap-slider/bootstrap-slider.js"></script>        
-
+    <!-- Select2 -->
+    <script src="/vendors/AdminLTE/plugins/select2/select2.full.min.js"></script>
+    <!-- InputMask -->
+    <script src="/vendors/AdminLTE/plugins/input-mask/jquery.inputmask.js"></script>
+    <script src="/vendors/AdminLTE/plugins/input-mask/jquery.inputmask.date.extensions.js"></script>
+    <script src="/vendors/AdminLTE/plugins/input-mask/jquery.inputmask.extensions.js"></script>
+    <!-- iCheck 1.0.1 -->
+    <script src="/vendors/AdminLTE/plugins/iCheck/icheck.min.js"></script>
+    
     <!-- AdminLTE App -->
     <script src="/vendors/AdminLTE/dist/js/app.min.js"></script>
     <!-- AdminLTE for demo purposes -->
@@ -511,8 +535,8 @@
                     </a>
                     <ul class="treeview-menu">
                         <li><a href="/forms/general"><i class="fa fa-circle-o"></i> General Elements</a></li>
+                        <li><a href="/forms/advanced"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
                         <!-- 
-                        <li><a href="/vendors/AdminLTE/dist/pages/forms/advanced.html"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
                         <li><a href="/vendors/AdminLTE/dist/pages/forms/editors.html"><i class="fa fa-circle-o"></i> Editors</a></li>
                         -->
                     </ul>
