--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -51,7 +51,8 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins
         folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="/vendors/AdminLTE/dist/css/skins/_all-skins.min.css">
-
+    <!-- bootstrap wysihtml5 - text editor -->
+    <link rel="stylesheet" href="/vendors/AdminLTE/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
     <!-- Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 
@@ -152,6 +153,8 @@
     <script src="/vendors/AdminLTE/plugins/input-mask/jquery.inputmask.extensions.js"></script>
     <!-- iCheck 1.0.1 -->
     <script src="/vendors/AdminLTE/plugins/iCheck/icheck.min.js"></script>
+    <!-- CK Editor -->
+    <script src="https://cdn.ckeditor.com/4.5.7/standard/ckeditor.js"></script>
     
     <!-- AdminLTE App -->
     <script src="/vendors/AdminLTE/dist/js/app.min.js"></script>
@@ -536,9 +539,7 @@
                     <ul class="treeview-menu">
                         <li><a href="/forms/general"><i class="fa fa-circle-o"></i> General Elements</a></li>
                         <li><a href="/forms/advanced"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
-                        <!-- 
-                        <li><a href="/vendors/AdminLTE/dist/pages/forms/editors.html"><i class="fa fa-circle-o"></i> Editors</a></li>
-                        -->
+                        <li><a href="/forms/editors"><i class="fa fa-circle-o"></i> Editors</a></li>
                     </ul>
                 </li>
                 <!-- 
