Added Tables Simple page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -542,7 +542,6 @@
                         <li><a href="/forms/editors"><i class="fa fa-circle-o"></i> Editors</a></li>
                     </ul>
                 </li>
-                <!-- 
                 <li class="treeview">
                     <a href="#">
                     <i class="fa fa-table"></i> <span>Tables</span>
@@ -551,11 +550,10 @@
                     </span>
                     </a>
                     <ul class="treeview-menu">
-                    <li><a href="/vendors/AdminLTE/dist/pages/tables/simple.html"><i class="fa fa-circle-o"></i> Simple tables</a></li>
-                    <li><a href="/vendors/AdminLTE/dist/pages/tables/data.html"><i class="fa fa-circle-o"></i> Data tables</a></li>
+                        <li><a href="/tables/simple"><i class="fa fa-circle-o"></i> Simple tables</a></li>
+                        <!-- <li><a href="/vendors/AdminLTE/dist/pages/tables/data.html"><i class="fa fa-circle-o"></i> Data tables</a></li> -->
                     </ul>
                 </li>
-                -->
                 <li>
                     <a href="/calendar">
                     <i class="fa fa-calendar"></i> <span>Calendar</span>
