Added Tables Data tables page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -53,6 +53,9 @@
     <link rel="stylesheet" href="/vendors/AdminLTE/dist/css/skins/_all-skins.min.css">
     <!-- bootstrap wysihtml5 - text editor -->
     <link rel="stylesheet" href="/vendors/AdminLTE/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+    <!-- DataTables -->
+    <link rel="stylesheet" href="/vendors/AdminLTE/plugins/datatables/dataTables.bootstrap.css">    
+
     <!-- Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 
@@ -117,7 +120,10 @@
     <!-- bootstrap color picker -->
     <script src="/vendors/AdminLTE/plugins/colorpicker/bootstrap-colorpicker.min.js"></script>
     <!-- bootstrap time picker -->
-    <script src="/vendors/AdminLTE/plugins/timepicker/bootstrap-timepicker.min.js"></script>    
+    <script src="/vendors/AdminLTE/plugins/timepicker/bootstrap-timepicker.min.js"></script>
+    <!-- DataTables -->
+    <script src="/vendors/AdminLTE/plugins/datatables/jquery.dataTables.min.js"></script>
+    <script src="/vendors/AdminLTE/plugins/datatables/dataTables.bootstrap.min.js"></script>    
     <!-- FastClick -->
     <script src="/vendors/AdminLTE/plugins/fastclick/fastclick.js"></script>
     <!-- Sparkline -->
@@ -551,7 +557,7 @@
                     </a>
                     <ul class="treeview-menu">
                         <li><a href="/tables/simple"><i class="fa fa-circle-o"></i> Simple tables</a></li>
-                        <!-- <li><a href="/vendors/AdminLTE/dist/pages/tables/data.html"><i class="fa fa-circle-o"></i> Data tables</a></li> -->
+                        <li><a href="/tables/data"><i class="fa fa-circle-o"></i> Data tables</a></li>
                     </ul>
                 </li>
                 <li>
