Implemented Mailbox's inbox & compose pages

--- a/views/layouts/default.ejs
+++ b/views/layouts/default.ejs
@@ -596,8 +596,9 @@
                                 </span>
                             </a>
                         </li>
-                        <!-- 
-                        <li><a href="compose.html">Compose</a></li>
+                        
+                        <li><a href="/mailbox/compose">Compose</a></li>
+                        <!--                        
                         <li><a href="read-mail.html">Read</a></li>
                         -->
                     </ul>
