Added Mailbox read page

--- a/views/layouts/default.ejs
+++ b/views/layouts/default.ejs
@@ -595,12 +595,9 @@
                                 <span class="label label-primary pull-right">13</span>
                                 </span>
                             </a>
-                        </li>
-                        
-                        <li><a href="/mailbox/compose">Compose</a></li>
-                        <!--                        
-                        <li><a href="read-mail.html">Read</a></li>
-                        -->
+                        </li>                        
+                        <li><a href="/mailbox/compose">Compose</a></li>                      
+                        <li><a href="/mailbox/read">Read</a></li>
                     </ul>
                 </li>                                    
                 <% } %>
